tests/ui/consts/const-eval/ptr_fragments_mixed.stderr
error[E0080]: unable to read parts of a pointer from memory at ALLOC0
  --> $DIR/ptr_fragments_mixed.rs:19:9
   |
LL |         y
   |         ^ evaluation of `APTR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error[E0080]: unable to read parts of a pointer from memory at ALLOC1
  --> $DIR/ptr_fragments_mixed.rs:33:9
   |
LL |         y
   |         ^ evaluation of `BPTR` failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
